--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1594,7 +1594,7 @@ button,
         -webkit-transition: opacity 0.5s ease;
         -ms-transition: opacity 0.5s ease;
         transition: opacity 0.5s ease;
-        content: '';
+        /*content: '';*/
         display: block;
         position: absolute;
         top: 0;
